fix: enhance readability of retrospective summary scores by adjusting background styling

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -1222,9 +1222,7 @@ div.ms-Tooltip-content p.ms-Tooltip-subtext a {
 
 .retrospectives-retro-summary-dialog .retro-summary-effectiveness-scores ul.chart .chart-response {
   & span {
-    @apply grid px-2 py-4 pointer-events-none blur-xl rounded-4xl;
-
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 70%, rgba(0, 0, 0, 0) 100%);
+    @apply grid justify-end p-2 pl-24 pointer-events-none rounded-4xl bg-black/50;
   }
 
   &.red-chart-response {
